fix: cta alignmnet

--- a/src/root.css
+++ b/src/root.css
@@ -8,7 +8,6 @@ a {
 }
 
 main {
-  text-align: center;
   margin: 0 auto;
 }
 
